Title: fix alignment of poster download.

--- a/app/css/title.sass
+++ b/app/css/title.sass
@@ -318,6 +318,6 @@ $line-color: saturate(mix($beige, $red, 50%), 80%)
   @media (min-width: 769px) // desktop
     display: block
     position: absolute
-    bottom: 80px
+    bottom: 60px
     right: 40px
 
